--- a/app.env
+++ b/app.env
@@ -1,3 +1,5 @@
 PORT=5000
 TEMPDIR=_temp
-FILE_DELETE_DURATION_MINUTES=10
+FILE_DELETE_DURATION_MINUTES=100
+TASKRUNNER_DURATION=100
+PRINTERS=<<url>>,<<api-key>>
