--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/qrcode": "^1.5.0",
     "bootstrap": "^5.2.0",
     "gcode-viewer": "^0.4.0",
+    "qrcode": "^1.5.1",
     "rxjs": "~7.5.0",
     "three": "^0.143.0",
     "tslib": "^2.3.0",
