--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,18 +20,22 @@
     "@angular/router": "^14.2.4",
     "@angular/service-worker": "^14.1.0",
     "@types/qrcode": "^1.5.0",
+    "animejs": "3.1",
     "bootstrap": "^5.2.0",
     "gcode-viewer": "^0.4.0",
     "qrcode": "^1.5.1",
     "rxjs": "~7.5.0",
     "three": "^0.143.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "paper": "^0.12.15",
+    "paperjs-offset": "^1.0.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.4",
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.4",
+    "@types/animejs": "^3.1.5",
     "@types/jasmine": "~4.0.0",
     "@types/three": "^0.143.2",
     "jasmine-core": "~4.2.0",
