--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 5000:5000
     volumes:
       - ./config.yml:/app/config.yml
+      - ./_tmp:/app/_temp
     logging:
       driver: "json-file"
       options:
